--- a/machida/Makefile
+++ b/machida/Makefile
@@ -47,14 +47,19 @@ machida_clean:
 	rm -rf $(MACHIDA_BUILD)
 
 machida_build: $(MACHIDA_BUILD)/machida
+machida_build_resilience: $(MACHIDA_BUILD)/machida_resilience
 
 -include $(MACHIDA_PATH)/machida.d
+
 $(MACHIDA_BUILD)/machida: $(MACHIDA_BUILD)/libpython-wallaroo.a
 	$(eval original_PONYCFLAGS := $(PONYCFLAGS))
-	$(eval PONYCFLAGS := $(original_PONYCFLAGS) -D resilience -D spike -D spiketrace --output=$(MACHIDA_BUILD) --path=$(MACHIDA_BUILD))
-	$(call PONYC,$(abspath $(MACHIDA_PATH:%/=%)))
-	mv $(abspath $(MACHIDA_BUILD:%/=%))/machida $(abspath $(MACHIDA_BUILD:%/=%))/machida_resilience
 	$(eval PONYCFLAGS := $(original_PONYCFLAGS) --output=$(MACHIDA_BUILD) --path=$(MACHIDA_BUILD))
+	$(call PONYC,$(abspath $(MACHIDA_PATH:%/=%)))
+	$(eval PONYCFLAGS := $(original_PONYCFLAGS))
+
+$(MACHIDA_BUILD)/machida_resilience: $(MACHIDA_BUILD)/libpython-wallaroo.a
+	$(eval original_PONYCFLAGS := $(PONYCFLAGS))
+	$(eval PONYCFLAGS := $(original_PONYCFLAGS) -D resilience --output=$(MACHIDA_BUILD) --path=$(MACHIDA_BUILD))
 	$(call PONYC,$(abspath $(MACHIDA_PATH:%/=%)))
 	$(eval PONYCFLAGS := $(original_PONYCFLAGS))
 
