Split correctness tests commands
- log_rotation, with its own Makefile
- recovery, with its own Makefile
- restart_without_resilience, with its own Makefile
- Remove the central Makefile, correctness_tests.py, and the __init__.py files.

--- a/machida/Makefile
+++ b/machida/Makefile
@@ -40,6 +40,7 @@ WALLAROO_LIB =  $(buffy_path)/lib
 # with our own custom rules. This allows the top level commands like
 # "make test" to work.
 build-machida: machida_build
+build-machida_resilience: machida_build_resilience
 test-machida: build-machida
 clean-machida: machida_clean
 
