--- a/testing/correctness/tests/recovery/Makefile
+++ b/testing/correctness/tests/recovery/Makefile
@@ -1,26 +1,45 @@
 # include root makefile
 ifndef ROOT_MAKEFILE_MK
-include ../../../Makefile
+include ../../../../Makefile
 endif
 
 # prevent rules from being evaluated/included multiple times
 ifndef $(abspath $(lastword $(MAKEFILE_LIST)))_MK
 $(abspath $(lastword $(MAKEFILE_LIST)))_MK := 1
 
+# uncomment to disable generate test related targets in this directory
+#TEST_TARGET := false
+
 # uncomment to disable generate pony related targets (build/test/clean) for pony sources in this directory
-#PONY_TARGET := false
+PONY_TARGET := false
 
 # uncomment to disable generate exs related targets (build/test/clean) for elixir sources in this directory
-#EXS_TARGET := false
+EXS_TARGET := false
 
 # uncomment to disable generate docker related targets (build/push) for Dockerfile in this directory
-#DOCKER_TARGET := false
+DOCKER_TARGET := false
 
 # uncomment to disable generate recursing into Makefiles of subdirectories
-#RECURSE_SUBMAKEFILES := false
+RECURSE_SUBMAKEFILES := false
+
+RECOVERY_PATH := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
+CUSTOM_PATH += :$(SEQUENCE_WINDOW_PATH):$(VALIDATOR_PATH):$(EXTERNAL_SENDER_PATH)
+
+build-testing-correctness-tests-recovery: build-testing-correctness-apps-sequence_window
+build-testing-correctness-tests-recovery: build-testing-tools-external_sender
+build-testing-correctness-tests-recovery: clean-machida
+build-testing-correctness-tests-recovery: build-machida_resilience
+test-testing-correctness-tests-recovery: build-testing-correctness-tests-recovery
+test-testing-correctness-tests-recovery: recovery_tests
+test-testing-correctness-tests-recovery: clean-machida
 
 # standard rules generation makefile
 include $(rules_mk_path)
+
+recovery_tests:
+	cd $(RECOVERY_PATH) && \
+	python2 -m pytest --verbose recovery.py
+
 
 # args to RUN_DAGON and RUN_DAGON_SPIKE: $1 = test name; $2 = ini file; $3 = timeout; $4 = wesley test command, $5 = include in CI
 # NOTE: all paths must be relative to buffy directory (use buffy_path variable)
@@ -32,6 +51,4 @@ include $(rules_mk_path)
 #,<TIMEOUT VALUE> \
 #,<WESLEY TEST COMMAND> \
 #,<INCLUDE IN CI>))
-
-# end of prevent rules from being evaluated/included multiple times
 endif
